--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage":"https://github.com/Quantumspring/portfolio-website",
   "name": "portfolio-website",
   "version": "0.1.0",
   "private": true,
